package Practica_Parcial.Parcial_LaboIII.Ejercicio2.src.Clases;

public interface TipoDato {
    
    public abstract Integer tamanio();
}  
