@startuml

title ** Archivo **

'Clases 
interface TipoDato{   
   - nombre: String 

   + {abstract}tamanio(): Integer 
}

class Archivo{
  - nombre: String 
}

class Directorio{
   - nombre: String 
   - archivos: ArrayList<TipoDato>
   + agregarArchivo(TipoDato): void 
   + eliminarArchivo(TipoDato): void
}

class Link{
   - nombre: String 
   + conectar(TipoDato): void
}

'Relaciones 

TipoDato <|-- Archivo 
TipoDato <|-- Directorio 
TipoDato <|-- Link 

@enduml